fixed financial page layout issue

--- a/screen.css
+++ b/screen.css
@@ -238,8 +238,7 @@ li {
     border: 1px solid white;
 }
 
-li a {
-
+nav li a {
     display: block;
     color: white;
     text-align: center;
@@ -248,10 +247,10 @@ li a {
          clear: both;
 }
 /* Change the link color to #111 (black) when hover */
-li a:hover {
+nav li a:hover {
     background-color: #111;
 }
-.active {
+nav .active {
     background-color: #4CAF50;
 }
 
@@ -332,6 +331,67 @@ h3{
   border: none;
   border-radius: 3px;
 }
+/***************************************************************************/
+                               /*finance page*/
+
+.finance #intro{
+  width: 90%;
+  margin: 0 auto;
+}
+.finance .section{
+  width: 80%;
+  border: solid;
+  height: 250px;
+}
+
+.finance #student_accout{
+  height: 100%;
+}
+
+.finance #print{
+  height: 100%;
+}
+
+.finance #price{
+  height: 100%;
+}
+
+.finance #links{
+  width: 100%;
+  height: 100%;
+}
+
+.finance #links ul{
+ display: flex;
+ flex-direction: column;
+ background: none;
+}
+
+ #links ul li a{
+  color: black;
+   text-align: left;
+ }
+
+.finance .flexbox{
+  border: solid;
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /***************************************************************************/
@@ -485,7 +545,7 @@ h3{
 
 /*>>>>>>>>>>>>>>>>>>>>>>>>>*/
 /*payment*/
-@media screen and (min-width: 560px){
+@media screen and (min-width: 600px){
   li {
         float: left;
         border: none;
@@ -500,6 +560,27 @@ h3{
   #CardName, #CardNumber, #CardType, #ExpireMonth, #ExpireYear, #CVVNumber, #send{
   width: 50%;
   }
+/*<<<<<<<<<<<<<<<<<<<<<<<<<<<*/
+/*>>>>>>>>>>>>>>>>>>>>>>>>>*/
+  .finance .section{
+  width: 30%;
+}
+
+.finance #price{
+  width: 100%;
+}
+
+.finance #prices{
+margin: 0 auto;}
+
+.finance .flexbox{
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+
+}
 /*<<<<<<<<<<<<<<<<<<<<<<<<<<<*/
 
 @media screen and (min-width: 616px){
@@ -603,6 +684,12 @@ header{
     width:100%;
   }
 /*<<<<<<<<<<<<<<<<<<<<<<<<<<<*/
+
+  .finance #price, .finance #links{
+    width: 40%;
+  }
+
+
 }
 
 @media screen and (min-width: 960px){
@@ -643,11 +730,17 @@ header{
 
 
 @media screen and (min-width: 1200px){
+  .finance #intro{
+  width: 80%;
+}
   .flexbox{
     width: 1200px;
     margin: 0 auto;
   }
-
+  .finance .flexbox{
+    width: 1400px;
+    margin: 0 auto;
+  }
 
 }
 
